token/netpol/allow-ingress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: management-ui
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      role: management-ui
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
